fix prey overlapping

--- a/src/snakeGame/characters/snake/SnakePart.css
+++ b/src/snakeGame/characters/snake/SnakePart.css
@@ -8,7 +8,7 @@
 }
 
 .snake-part_head {
-	z-index: 1;
+	z-index: 3;
 	background-color: #fff;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .snake-part_tail {
-	z-index: 0;
+	z-index: 2;
 	background-color: palegreen;
 }
 
